--- a/README.adoc
+++ b/README.adoc
@@ -76,8 +76,8 @@ where
     film0_.rating=?
 order by
     film0_.length desc,
-    film0_.title
-asc limit ?, ?
+    film0_.title asc
+limit ?, ?
 ----
 [source, text]
 ----
