--- a/announcer/README.adoc
+++ b/announcer/README.adoc
@@ -2,13 +2,9 @@
 Per Minborg
 :toc: macro
 
-== Contents
-toc::[]
-
-== Announcer
 Start-up messages for features.
 
-=== Info
+== Info
 [%header,cols=2*]
 |===
 |Property
@@ -21,7 +17,7 @@ Start-up messages for features.
 |jpastreamer.announcer
 |===
 
-=== Summary
+== Summary
 Announcer allows feature libraries to announce themselves upon start-up. A provided just provides an implementation of the following class:
 
 [source, java]
@@ -31,6 +27,8 @@ public interface Announcer {
     /**
      * Returns a greeting that is to be output upon
      * system start-up.
+     * <p>
+     * Returning an empty String prevents output.
      *
      * @return a greeting that is to be output upon
      *         system start-up
@@ -40,5 +38,8 @@ public interface Announcer {
 }
 ----
 
-=== Details
+== Details
 None
+
+== Contents
+toc::[]
