--- a/README.adoc
+++ b/README.adoc
@@ -176,9 +176,7 @@ JPAstreamer is released under the link:https://github.com/speedment/jpa-streamer
 == Short Video
 Here is a short 1-minute video describing JPAstreamer:
 
-++++
-<iframe width="1078" height="480" src="https://www.youtube.com/embed/nfskjG4bvAg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-++++
+img::./images/video-tn.png[link="https://youtu.be/nfskjG4bvAg"]
 
 == Contents
 toc::[]
