--- a/docs/modules/get-jpa-streamer/pages/install-maven.adoc
+++ b/docs/modules/get-jpa-streamer/pages/install-maven.adoc
@@ -34,7 +34,7 @@ To install, add the following code to the project's pom.xml-file:
                 </goals>
                 <configuration>
                     <sources>
-                        <source>target/generated-sources/annotations</source>#<3>
+                        <source>${project.build.directory}/generated-sources/annotations</source>#<3>
                     </sources>
                 </configuration>
             </execution>
